Fix size and overflow on preview container

--- a/frontend/src/stylesheets/components/hunt/_create_form.scss
+++ b/frontend/src/stylesheets/components/hunt/_create_form.scss
@@ -19,13 +19,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 540px;
-  width:1050px;
+  height: 600px;
+  width:1100px;
   position: absolute;
   border-radius: 25px;
   border: 20px solid rgba(255, 255, 255, 0.943); 
   box-shadow: 5px 10px rgba(3, 3, 3, 0.162);
-  top: 25px;
+  top: 7%;
+  left: 30%;
 }
 
 // .create-form-header {
@@ -80,8 +81,8 @@
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
-  width: 275px;
-  height: 400px;
+  width: 290px;
+  height: 460px;
   background-color: $yellow;
   border-radius: 25px;
 }
@@ -96,8 +97,8 @@
 }
 
 .hunt-photo img{
-  width: 320px;
-  height: 320px;
+  width: 200px;
+  height: 200px;
   margin-bottom: 6px;
   border-radius: 20px;
   border: 5px inset;
@@ -107,12 +108,16 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  width: 96%;
+  width: 99%;
   z-index: 50 !important;
 }
 
 .red-ex svg {
   color: red;
+}
+
+.red-ex:hover svg {
+  color: rgba($color: #e66060, $alpha: 1.0)
 }
 
 .create-form-body-right {
@@ -233,10 +238,10 @@
   color: $red;
   height: 340px;
   width: 340px;
-  top: 200px;
-  left: 240px;
+  top: 5%;
+  left: 9.8%;
   z-index: 10;
-  transform: rotate(-20deg);
+  transform: rotate(25deg);
   font-size: 40px;
   font-weight: bold;
   letter-spacing: .1em;
